14-May-2015 Laurent Duflot
	* ZeroLeptonCRY, PhysObjProxies: remove isolation in PhotonProxy and
	NTCRYVars block since not used directly in IsSignalPhoton that now
	uses the isolation tool.

14-May-2015 Laurent Duflot
	* adapt to SUSYTools-00-05-00-30:
	CosmicMuon vetoes 5 x more events  -> to be understood
	ttbar: -20% in SR and -10% in CRWT
	* tag ZeroLeptonRun2-00-00-33

14-May-2015 Laurent Duflot
	* add python/mc15_13TeV_MCSampleList.py with preliminary mc15 samples
	* tag ZeroLeptonRun2-00-00-32

13-May-2015 Laurent Duflot
	* PhysObjProxies: add PhotonProxy
	* ZeroLeptonNTVars: redefine CRY block content (initial met and photon
	pt, eta, phi, isolation).
	* ZeroLeptonCRY : fill CRY block

11-May-2015 Laurent Duflot
	* FilterUpdateMerge.py: add gamma+jet merging
	* CRWT, CRZ : add ExtraVar block
	* CRY : bug fix for truth vs reco handling
	* GRLProcessor, BuildSUSYObjects : cleanup StatusCode checks

08-May-2015 Geraldine Conti
	* small fix for cutEtMissTruthTest in ZeroLeptonCutVal.cxx

06-May-2015 Geraldine Conti
	*Fixed bug with overlap removal for CRY incl. the photon

04-May-2015 Geraldine Conti
	* Added pt and eta cuts for photons for truth overlap removal procedure
	* Fixed the call to OverlapRemoval from BuildSUSYObjs for the photon case by adding
	a missing parameter
	* Added b-tagging definition for truth jets

30-Apr-2015 Geraldine Conti
	* Added overlap removal procedure for truth analysis
	* Added overlap removal for CRY incl. the photon (still buggy)

27-Apr-2015 Geraldine Conti
	* Added truth code in the control regions CRY, CRW, CRZ, VRWT (small bug still
	to be fixed in CRY)

23-Apr-2015 Laurent Duflot
	* FilterUpdateMerge.cxx: fix bug in NTExtraVars merging

23-Apr-2015 Geraldine Conti
	* Added config file to run truth code, zeroleptontruth.config
	* Modified ZeroLeptonSR.cxx/h to run truth code on it
	* Added BuildTruthObjects and PhysObjProxyFillerTruth needed for truth code

20-Apr-2015 Laurent Duflot